@@ -1,3 +1,7 @@
+2001-04-01 12:20 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * source/rdd/dbfntx/dbfntx1.c
+     * ntxOrderListRebuild() mostly completed
+
 2001-03-30 14:10 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
    * source/rdd/dbfntx/dbfntx1.c
      ! fixed the bug, reported by John M. S. Chiang, which appeared while
